sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:31: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: Unit
          case (baseDepart,posDepart) => ameneJoueur(baseDepart, posDepart, base, 1)
               ^